# nu_plugin_run_internal

./: Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs
