[package]
name = "nu_plugin_run_internal"
version = "0.1.0"
authors = ["Darren Schroeder <343840+fdncred@users.noreply.github.com>"]
edition = "2021"
description = "a nushell plugin called run_internal"
repository = "https://github.com/fdncred/nu_plugin_run_internal"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
nu-plugin = { path = "../nushell/crates/nu-plugin" }
nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
nu-engine = { path = "../nushell/crates/nu-engine" }
nu-parser = { path = "../nushell/crates/nu-parser" }
nu-command = { path = "../nushell/crates/nu-command" }
nu-cmd-lang = { path = "../nushell/crates/nu-cmd-lang" }
nu-cmd-extra = { path = "../nushell/crates/nu-cmd-extra" }
nu-utils = { path = "../nushell/crates/nu-utils" }
nu-cli = { path = "../nushell/crates/nu-cli" }
nu-path = { path = "../nushell/crates/nu-path" }
# nu-plugin = "0.101.0"
# nu-protocol = { version = "0.101.0", features = ["plugin"] }

rand = {version = "0.8", optional = true }
multipart-rs = { version = "0.1.13", optional = true }
native-tls = { version = "0.2", optional = true }
ureq = { version = "2.12", optional = true }
uuid = {version = "1.12.0", optional = true }

[dev-dependencies]
nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
# nu-plugin-test-support = { version = "0.101.0" }

[features]

default = [
  "sqlite",
  "rand",
  "os",
  "network"
]
stable = ["default"]

# SQLite commands for nushell
sqlite = ["nu-command/sqlite", "nu-cmd-lang/sqlite"]
os = ["nu-engine/os", "nu-protocol/os", "nu-utils/os"]
network = ["multipart-rs", "native-tls", "ureq/native-tls", "uuid"]
